<resources>
    <string name="app_name">D-Fit</string>
    <string name="home_strokes" translatable="false">STROKES</string>
    <string name="home_drag" translatable="false">DRAG</string>
    <string name="home_interval" translatable="false">CYCLE</string>
    <string name="home_ave_500" translatable="false">AVE/500M</string>
    <string name="home_500" translatable="false">/500M</string>
    <string name="home_km_30min" translatable="false">KM/30MIN</string>
    <string name="home_sm" translatable="false">S/M</string>
    <string name="home_rpm" translatable="false">RPM</string>
    <string name="home_level" translatable="false">LEVEL</string>
    <string name="home_watts" translatable="false">WATTS</string>
    <string name="home_distance" translatable="false">M</string>
    <string name="home_distance_km" translatable="false">KM</string>
    <string name="home_ave_watts" translatable="false">AVE WATTS</string>
    <string name="home_ave_one_km" translatable="false">/1KM AVE</string>
    <string name="home_one_km" translatable="false">/1KM</string>
    <string name="home_calories" translatable="false">CAL</string>
    <string name="home_calories_hr" translatable="false">CAL/HR</string>
    <string name="home_exit">Are you sure to exit ?</string>

    <string name="setting_back">BACK</string>
    <string name="setting_settings">SETTINGS</string>

    <string name="bluetooth_switch_enable">Bluetooth Enable</string>
    <string name="bluetooth_switch_disable">Bluetooth Disable</string>
    <string name="bluetooth_scanning">Scanning for Devices</string>

    <string name="heart_rate_switch">HRM Bluetooth Smart Wireless</string>
    <string name="heart_rate_scanning">Heart Rate Monitors - Tap to select / disconnect</string>

    <string name="workouts" translatable="false">WORKOUTS</string>
    <string name="workouts_upload">UPLOAD</string>
    <string name="workouts_edit">EDIT</string>
    <string name="workouts_date" translatable="false">DATE</string>
    <string name="workouts_local_id" translatable="false">ID</string>
    <string name="workouts_type" translatable="false">TYPE</string>
    <string name="workouts_result" translatable="false">RESULT</string>
    <string name="workouts_done">DONE</string>
    <string name="workouts_time" translatable="false">TIME</string>
    <string name="workouts_meters" translatable="false">METERS</string>
    <string name="workouts_500" translatable="false">/500M</string>
    <string name="workouts_ave_500" translatable="false">AVE /500M</string>
    <string name="workouts_ave_one_km" translatable="false">/1KM AVE</string>
    <string name="workouts_clas" translatable="false">CALS</string>
    <string name="workouts_watts" translatable="false">WATTS</string>
    <string name="workouts_ave_watts" translatable="false">AVE WATTS</string>
    <string name="workouts_cal_hr" translatable="false">CAL/HR</string>
    <string name="workouts_sm" translatable="false">S/M</string>
    <string name="workouts_rpm" translatable="false">RPM</string>
    <string name="workouts_level" translatable="false">LEVEL</string>
    <string name="workouts_info_delete">Delete</string>
    <string name="workouts_cancel">Cancel</string>
    <string name="workouts_ok">OK</string>
    <string name="workouts_info_delete_txt">Are you sure to delete this workout?</string>
    <string name="workouts_info_online_txt">You must first login from the \nlogbook settings page</string>
    <string name="workouts_info_online">Online LogBook Status</string>

    <string name="version_title">APP VERSION</string>
    <string name="version_new_version">App has a new version</string>

    <string name="login_title">EXISTING ACCOUNT</string>
    <string name="login_user_name">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_forget">Forget Username / Password</string>
    <string name="login_create">Create New Account</string>
    <string name="login_hint">Delete workouts in Online Logbook when deleting form APP</string>

    <string name="create_title">CREATE NEW ACCOUNT</string>
    <string name="create_first_name">First Name：</string>
    <string name="create_last_name">Last Name：</string>
    <string name="create_gender">Gender：</string>
    <string name="create_birth">Date of birth：</string>
    <string name="create_country">Country：</string>
    <string name="create_email_address">Email Address：</string>
    <string name="create_username">Username：</string>
    <string name="create_password">Password：</string>
    <string name="create_confirm_password">Confirm Password：</string>
    <string name="create_create_account">CREATE ACCOUNT</string>
    <string name="create_male">Male</string>
    <string name="create_female">Female</string>
    <string name="create_gender_title">Please select gender: </string>
    <string name="create_confirm">Confirm</string>
    <string name="create_country_title">Please select country</string>


    <!-- 个人资料 -->
    <string name="personal_data_head">Avatar</string>

    <string name="personal_data_id">User ID</string>
    <string name="personal_data_name">Nick name</string>
    <string name="personal_data_name_hint">Set nickname</string>

    <string name="personal_data_address">Area</string>
    <string name="personal_data_address_hint">Please choose</string>
    <string name="personal_data_email">Email</string>
    <string name="personal_data_birthday">Birthday</string>
    <string name="personal_data_sex">Gender</string>

    <string name="personal_data_phone">Phone</string>
    <string name="personal_data_phone_hint">Bind now</string>
    <string name="personal_data_title">Personal information</string>
    <string name="logged">Already logged</string>
    <string name="please_logged">Please Login</string>
    <string name="timeout">Connection timed out</string>
    <string name="cannot_upload">Not yet open to upload</string>
    <string name="not_support_location">The device does not support location services</string>
    <string name="save_success">Save successfully</string>
    <string name="save_fail">Save fail</string>
    <string name="delete_success">Delete successfully</string>
    <string name="upload_success">Uploaded successfully</string>
    <string name="upload_fail">"Upload failed: "</string>
    <string name="upload_fail_httpcode">"Upload failed: httpcode = "</string>
    <string name="delete_fail">Delete fail</string>
    <string name="Login_fail">"Login failed: "</string>
    <string name="Login_fail_httpcode">"Login failed: httpcode = "</string>
    <string name="login_success">Login successful</string>
    <string name="inconsistent_passwords">Inconsistent passwords</string>
    <string name="email_format_error">The email format is wrong!</string>
    <string name="send_email_fail">email_send_fail</string>
    <string name="email_send_fail">email_send_fail</string>
    <string name="text_1">seconds return home</string>
    <string name="dzb">DigitalWatch</string>
    <string name="sign_out">Sign out</string>
    <string name="user_name">UserName</string>
    <string name="has_sent">email_has_sent</string>
    <string name="connect_now">Connect the device or not?</string>
    <string name="warm_tip">Warm Tip</string>
    <string name="ok">Yes</string>
    <string name="cancel">NO</string>
    <string name="name">name</string>
    <string name="some_hint_2">
    \t\t\t\t When you use the APP, D-Fit will always collect and use your location, personal information (name, email, phone number), fitness information, photos, files and documents, calendars, devices or other IDs in order to use them in the application. When it is closed or not in use, it can also support various functions until you stop using the APP.
The usage is explained below \n
\t\t\t\t 1. Location:  \t Used to connect Bluetooth devices to support data transfer between APP and sports equipment. \n
\t\t\t\t 2. Personal Information:  \t Provide user registration and login functions. \n
\t\t\t\t 3. Fitness information:  \t store, analyze, and upload the user\'s exercise data. \n
\t\t\t\t 4. Photos, files and documents:  \t After the exercise, the exercise data will be automatically saved in the device. \n
\t\t\t\t 5. Calendar:  \t Support users to select the date of birth when registering. \n
\t\t\t\t 6. Device or other ID:  \t Identifies the user\'s mobile phone model to support developers to adapt to multiple mobile phones.</string>

    <string name="some_hint">
        \n\n\n
\t\t\t\t\t\t\t\t D-Fit collects location data to enable Bluetooth connection to transfer data between APP and fitness equipment even when the app is closed or not in use.\n
    </string>
    <string name="skip">Skip</string>
    <string name="no_hint">Don\'t show again</string>
    <string name="accept">Accept</string>
    <string name="no_accept">Disagree</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip2">skip</string>
    <string name="send_email_code">send code</string>
    <string name="hint_enter_code">enter code</string>
    <string name="get_rundata_info_fail">Failed to get data from server</string>
    <string name="start_scan">Start scanning...</string>


    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="connecting" translatable="false">Connecting</string>
    <string name="connect" translatable="false">Connect</string>
    <string name="please_open_local">Please turn on location services</string>
    <string name="please_open_bluetooth">Please agree to turn on bluetooth</string>

    <string name="upload_server_all">all uploaded</string>

</resources>