<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.user.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_387E2F"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/login_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-25dp"
            android:layout_toStartOf="@id/iv_back"
            android:gravity="center"
            android:text="@string/skip2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:rotation="180"
            android:src="@drawable/btn_back"
            android:visibility="visible" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/login_user_name"
                android:textColor="@color/color_707070"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/edt_user_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@null"
                android:text="ZRGdddddd"
                app:emptyErrorString=""
                app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_user_name"
                app:layout_constraintTop_toTopOf="@id/tv_user_name"
                app:testErrorString="用户名格式不对" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/color_B5B3B3"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/login_password"
                android:textColor="@color/color_707070"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@null"
                android:inputType="numberPassword"
                android:text="1234"
                android:windowSoftInputMode="adjustUnspecified|stateHidden"
                app:emptyErrorString=""
                app:layout_constraintBottom_toBottomOf="@id/tv_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_password"
                app:layout_constraintTop_toTopOf="@id/tv_password" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/color_B5B3B3"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/btn_login_bg"
                android:gravity="center"
                android:padding="@dimen/dp_15"
                android:text="@string/login_btn"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/text_underline"
                android:text="@string/login_forget"
                android:textColor="@color/color_1A91F9"
                android:textSize="@dimen/sp_12"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_register" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_45"
                android:background="@drawable/text_underline"
                android:gravity="center"
                android:text="@string/login_create"
                android:textColor="@color/color_1A91F9"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <ImageView
                android:id="@+id/iv_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_enter"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/login_hint"
                android:textColor="@color/color_707070"
                android:textSize="@dimen/sp_12"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forget" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>